--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
+python-telegram-bot>=20.0
+python-dotenv
+SQLAlchemy
+psycopg2-binary
 httpx
 beautifulsoup4
 lxml
-python-telegram-bot
-python-dotenv
-schedule
-google-generativeai
-sqlalchemy
-psycopg2-binary
 playwright
